Bug 491677 - Blurred icons when using fractional scaling (Qt 6.8, frameworks and plasma master)
Summary: Blurred icons when using fractional scaling (Qt 6.8, frameworks and plasma m...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kiconthemes
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
: 491094 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-13 16:02 UTC by Alex Fiestas
Modified: 2024-08-16 19:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6
Sentry Crash Report:


Attachments
Video where the blurry icons can be observed. (1.83 MB, video/webm)
2024-08-13 16:13 UTC, Alex Fiestas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fiestas 2024-08-13 16:02:12 UTC
SUMMARY
While using latest Qt  6.8 + frameworks + plasma from master icons in Qt apps and some icons in plasma
are blurred as long as I have fractional scaling enabled.

STEPS TO REPRODUCE
1.  Enable fractional scaling
2. open kwrite
or
2. open a plasma popup

OBSERVED RESULT
Icons are blurry

EXPECTED RESULT
Icons should be sharp.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch, updated regularly.
KDE Plasma Version:  Master, compiled
KDE Frameworks Version:  Master, compiled
Qt Version: 6.8 from qt5.git branch

ADDITIONAL INFORMATION
I can patch and recompile if more information is needed.
Comment 1 Alex Fiestas 2024-08-13 16:13:24 UTC
Created attachment 172590 [details]
Video where the blurry icons can be observed.

Scaled down to 1080 from 4k but the icon blurriness can be observed.
Comment 2 Nate Graham 2024-08-13 16:37:52 UTC
I can't reproduce that with current git master for everything KDE, but Qt 6.7.2. At 100% or 150% scale on a 1080p screen, or 225% or 200% scale on a 4k screen, the icons don't exhibit the level of blurriness I can see in your screen recording.
Comment 3 Nate Graham 2024-08-13 16:49:11 UTC
Aha, apparently this is known and will be fixed with https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/146.
Comment 4 Alex Fiestas 2024-08-13 17:49:58 UTC
Awesome, I can confirm that the patch fixes the issue for me.
Comment 5 Nicolas Fella 2024-08-14 14:08:04 UTC
*** Bug 491094 has been marked as a duplicate of this bug. ***
Comment 6 Nicolas Fella 2024-08-15 11:35:14 UTC
Git commit 89bbd78273f96a858ea181c977dda50f223cc4c4 by Nicolas Fella.
Committed on 14/08/2024 at 14:08.
Pushed by nicolasfella into branch 'master'.

[kiconengine] Adapt to Qt behavior change in scaledPixmap

Since Qt 6.8 the size we get doesn't include the scale,
so apply that outselves

M  +7    -1    src/kiconengine.cpp

https://invent.kde.org/frameworks/kiconthemes/-/commit/89bbd78273f96a858ea181c977dda50f223cc4c4