[kiconengine] Adapt to Qt behavior change in scaledPixmap

Since Qt 6.8 the size we get doesn't include the scale,
so apply that outselves

BUG: 491677